# distributed_gpu

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  check_env.py  install.sh  pyproject.toml  requirements-comparison.txt  requirements-optional.txt  requirements.txt  run_experiments.py  setup.py
distributed_gpu/: __init__.py  auto_executor.py  cost_model.py  gpu_manager.py  mpi_manager.py  pipeline_optimizer.py  resource_planner.py  tensor_distributor.py
distributed_gpu/algorithms/: __init__.py  _utils.py  convolution.py  einsum.py  fft.py  matrix_ops.py  reduction.py  stencil.py
distributed_gpu/utils/: profiler.py
docs/: API_GUIDE.md
examples/: matrix_multiplication.py  run_algorithm.py  test_all.py  test_auto_executor.py
experiments/: benchmark_comparison.py  common.py  exp01_compute_performance.py  exp02_communication_overhead.py  exp03_strong_scaling.py  exp04_weak_scaling.py  exp05_domain_applications.py  exp06_innovation_ablation.py  exp07_feature_comparison.py  generate_thesis_figures.py  generate_thesis_figures_enhanced.py  run_all.sh  thesis_experiments.py  thesis_experiments_enhanced.py
results/comparison_20260212_064022/: comparison_matmul.json
results/comparison_20260212_064734/: comparison_allreduce.json
results/comparison_20260212_065043/: comparison_jacobi.json
results/comparison_20260212_065551/: comparison_fft.json
results/comparison_20260212_071927/: comparison_allreduce.json
results/comparison_20260212_091714/: comparison_matmul.json
results/comparison_20260212_092247/: comparison_allreduce.json  comparison_matmul.json
results/exp01_compute_performance/: 20260208_145942.json  latest.json
results/exp02_communication_overhead/: 20260208_150007.json  latest.json
results/exp03_strong_scaling_n1/: 20260208_150023.json  latest.json
results/exp03_strong_scaling_n2/: 20260208_150031.json  latest.json
results/exp03_strong_scaling_n4/: 20260208_150041.json  latest.json
results/exp04_weak_scaling_n1/: 20260208_150054.json  latest.json
results/exp04_weak_scaling_n2/: 20260208_150058.json  latest.json
results/exp04_weak_scaling_n4/: 20260208_150107.json  latest.json
results/exp05_domain_applications/: 20260208_150145.json  latest.json
results/exp06_innovation_ablation/: 20260208_150155.json  latest.json
results/exp07_feature_comparison/: 20260208_150203.json  latest.json
results/n4_20260211_061424/: exp1_compute_performance.json  exp2_comm_overhead.json  exp3_strong_scaling.json  exp4_weak_scaling.json  exp5_innovation.json  exp6_pipeline.json  exp7_cost_model.json  exp8_applications.json
results/n4_20260211_125204/: exp10_operator_comparison.json  exp1_compute_performance.json  exp2_comm_overhead.json  exp3_strong_scaling.json  exp4_weak_scaling.json  exp5_innovation.json  exp6_pipeline.json  exp7_cost_model.json  exp8_applications.json  exp9_memory_efficiency.json
results/thesis/: exp1_compute_performance_n4.json  exp2_comm_overhead_n4.json  exp3_strong_scaling_n1.json  exp3_strong_scaling_n2.json  exp3_strong_scaling_n4.json  exp3_strong_scaling_n8.json  exp4_weak_scaling_n1.json  exp4_weak_scaling_n2.json  exp4_weak_scaling_n4.json  exp4_weak_scaling_n8.json  exp5_innovation_n4.json  exp6_pipeline_n4.json  exp7_cost_model_n4.json  exp8_applications_n4.json
results/thesis_enhanced/: exp1_compute_performance_n4.json  exp2_comm_overhead_n4.json  exp3_strong_scaling_n1.json  exp3_strong_scaling_n2.json  exp3_strong_scaling_n4.json  exp3_strong_scaling_n8.json  exp4_weak_scaling_n1.json  exp4_weak_scaling_n2.json  exp4_weak_scaling_n4.json  exp4_weak_scaling_n8.json  exp5_innovation_n4.json  exp6_pipeline_n4.json  exp7_cost_model_n4.json  exp8_applications_n4.json
src/: __init__.py  cost_model.py  gpu_manager.py  mpi_manager.py  pipeline_optimizer.py  tensor_distributor.py
src/algorithms/: __init__.py  convolution.py  einsum.py  fft.py  matrix_ops.py  reduction.py
src/utils/: __init__.py
